--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/cTahirih/api-weather/issues"
   },
-  "homepage": "https://github.com/cTahirih/api-weather#readme",
+  "homepage": "https://github.com/cTahirih/api-weather/public",
   "dependencies": {
     "express": "^4.16.2"
   }
